@@ -746,8 +746,8 @@ class User implements GenericObject {
     public static function assignSmartyValues($smarty, $user = null) {
         if (!$user)
             $user = User :: getCurrentUser();
-        $smarty->assign('username', $user ? $user->getListUI() : '');
         $smarty->assign('userId', $user ? $user->getId() : '');
+        $smarty->assign('userName', $user ? $user->getListUI() : '');
         /**
          * Define user security levels for the template
          *
@@ -755,9 +755,9 @@ class User implements GenericObject {
          * used in a customized template to restrict certain links to specific
          * user access levels.
          */
-        $smarty->assign('isValidUser', $user && !$user->isSplashOnlyUser() ? true : false);
-        $smarty->assign('isSuperAdmin', $user && $user->isSuperAdmin());
-        $smarty->assign('isOwner', $user && $user->isOwner());
+        $smarty->assign('userIsValid', $user && !$user->isSplashOnlyUser() ? true : false);
+        $smarty->assign('userIsSuperAdmin', $user && $user->isSuperAdmin());
+        $smarty->assign('userIsANodeOwner', $user && $user->isOwner());
 
         if (isset ($_REQUEST['debug_request']) && ($user && $user->isSuperAdmin())) {
             // Tell Smarty everything it needs to know
