@@ -8,7 +8,7 @@
         {/if}
     <tr>
         <td>{"Your username"|_}:</td>
-        <td><input type="text" name="username" value="{$username}" size="20" id="form_username" onkeypress="return focusNext(this.form, 'oldpassword', event)"{if !$isSuperAdmin} readonly{/if}></td>
+        <td><input type="text" name="username" value="{$username}" size="20" id="form_username" onkeypress="return focusNext(this.form, 'oldpassword', event)"{if !$userIsSuperAdmin} readonly{/if}></td>
     </tr>
     <tr>
         <td>{"Your current password"|_}:</td>
@@ -57,7 +57,7 @@
 	};
 
 	{/literal}
-	{if $isSuperAdmin}
+	{if $userIsSuperAdmin}
 	document.getElementById("form_username").focus();
 	{else}
 	document.getElementById("form_oldpassword").focus();
