@@ -1,5 +1,5 @@
 <div id="node_list">
-	<h3>{"Status of all nodes of the"|_} {$hotspot_network_name} {"network"|_}</h3>
+	<h3>{"Status of all nodes of the"|_} {$networkName} {"network"|_}</h3>
 	<table>
 		<thead>
 		<tr>
