@@ -1,3 +1,8 @@
+2006-12-31 Benoit Grégoire  <bock@step.polymtl.ca>
+	* More Smarty cleanup
+	* Content.php:  Bugfix:  metadata wasn't deleted along with the rest of the 
+	content upon deletion.
+	
 2006-12-30 Benoit Grégoire  <bock@step.polymtl.ca>
 	* install.php:  Move path verification to the first page, and make it clearer.  Fix PHP warnings.
 	* wifidog/include/smarty.resource.string.php:  A smarty resource plugin to parse a smarty template from a string
